<resources>
    <string name="app_name">Liberiix</string>

    <string name="user">Utilizador</string>
    <string name="prof">Profissional</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="termsandconditions">Ao iniciar  sessão, concordo com os <a href="http://liberiix.com/docs/tCclientes_liberiix.htm"> Termos e Serviços</a></string>
    <string name="forgetpassword">Esqueceu sua password?</string>
    <string name="go_to_register">Registar-se</string>


    <!-- Temp strings for the flow -->
    <string name="action_go_to_list">Search</string>
    <string name="action_go_to_settings">Settings</string>
    <string name="action_go_to_detail">Details</string>
    <string name="action_go_to_schedule">Schedule</string>
    <string name="action_go_to_payments">Payments</string>
    <string name="action_go_to_chat">Contatar</string>

    <!-- Filter screen -->
    <string name="filter_generic">Generic Search</string>
    <string name="filter_activity">Activity</string>
    <string name="filter_services">Services</string>
    <string name="filter_name">Professional Name</string>
    <string name="filter_email">Email</string>
    <string name="filter_country">Country</string>
    <string name="filter_district">District</string>
    <string name="filter_council">Council</string>
    <string name="filter_clean">Limpar</string>

    <!-- Register screens -->
    <string name="rs_name">Nome</string>
    <string name="rs_email">E-mail</string>
    <string name="rs_confirmpassword">Confirm Password</string>
    <string name="rs_password">Password</string>
    <string name="rs_register">Registar</string>

<!-- Schedule one event -->
    <string name="sch_save">Agendar</string>
    <string name="sch_price">Preço (€)</string>
    <string name="sch_duration">Duração (horas)</string>
    <string name="sch_location">Localização</string>
    <string name="sch_observations">Observações</string>

    <!-- Bottom Navigation -->
    <string name="menu_mensagem">Mensagem</string>
    <string name="menu_pesquisa">Pesquisa</string>
    <string name="menu_schedule">Agendamento</string>


</resources>
