<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="pt.andreiaribeiro.com.andreiaribeiro.view.services.activities.ServicesFilterActivity">

    <LinearLayout
        android:id="@+id/filter_layout"
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <AutoCompleteTextView
                android:id="@+id/filter_genericsearch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/filter_generic"
                android:inputType="textAutoComplete"
                android:maxLines="1"/>
        </android.support.design.widget.TextInputLayout>

        <Spinner
            android:id="@+id/filter_activity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:prompt="@string/filter_activity"/>

        <Spinner
            android:id="@+id/filter_service"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:prompt="@string/filter_services"/>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/filter_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/filter_name"
                android:imeActionId="@+id/login"
                android:imeActionLabel="@string/action_sign_in_short"
                android:imeOptions="actionUnspecified"
                android:inputType="textAutoComplete"
                android:maxLines="1"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/filter_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/filter_email"
                android:imeActionId="@+id/login"
                android:imeActionLabel="@string/action_sign_in_short"
                android:imeOptions="actionUnspecified"
                android:inputType="textEmailAddress"
                android:maxLines="1"/>
        </android.support.design.widget.TextInputLayout>

        <Spinner
            android:id="@+id/filter_country"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Spinner
            android:id="@+id/filter_district"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Spinner
            android:id="@+id/filter_council"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />


        <Button
            android:id="@+id/button_services"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/action_go_to_list" />

    </LinearLayout>


</android.support.constraint.ConstraintLayout>
