<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp">
    <TextView
        android:id="@+id/sch_txtUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="id user"/>

        <TextView
            android:id="@+id/sch_txtService"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="id servico"/>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/sch_txtPrice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/sch_price"
                android:imeOptions="actionUnspecified"
                android:inputType="numberDecimal"
                android:maxLines="1" />

        </android.support.design.widget.TextInputLayout>

        <TextView
            android:id="@+id/sch_dateTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="date e hora"/>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/sch_txtDuration"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/sch_duration"
                android:imeOptions="actionUnspecified"
                android:inputType="number"
                android:maxLines="1" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/sch_txtLocation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/sch_location"
                android:imeOptions="actionUnspecified"
                android:inputType="text"
                android:maxLines="1" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/sch_txtObservations"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/sch_observations"
                android:imeOptions="actionUnspecified"
                android:inputType="text" />

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/sch_btnSave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sch_save"/>
</LinearLayout>

</android.support.constraint.ConstraintLayout>